<resources>
    <string name="app_name">Oyez Oyez Merchant</string>

    <string-array name="screen_main_tab_titles">
        <item>My Deals</item>
        <item>Bought Deals</item>
    </string-array>

    <!--Registration-->
    <string name="registration_welcome">Welcome aboard,</string>
    <string name="registration_description">we only need to get your business address and we\'ll take care of the rest</string>
    <string name="registration_pick_place">Select your business</string>

    <!--My Deals-->
    <string name="my_deals_edit">Edit Deal</string>

    <!--Add Deal-->
    <string name="add_deal">Add a deal</string>
    <string name="add_deal_take_picture">TAKE PICTURE</string>
    <string name="add_deal_retake_picture">RETAKE PICTURE</string>
    <string name="add_deal_enter_title">Enter Deal Title</string>
    <string name="add_deal_enter_quantity">Enter Quantity</string>
    <string name="add_deal_enter_original_price">Enter Original Price</string>
    <string name="add_deal_enter_discounted_price">Enter Discounted Price</string>
    <string name="add_deal_enter_description">Enter Description</string>
    <string name="add_deal_broadcast">BROADCAST YOUR DEAL</string>
    <string name="add_deal_must_take_picture">Please take a picture before broadcasting your deal</string>
    <string name="add_deal_fill_all_fields">Please fill up all fields before broadcasting your deal</string>

</resources>
